--- a/server/public/assets-css/killkistkreydy.css
+++ b/server/public/assets-css/killkistkreydy.css
@@ -2,9 +2,9 @@
 /* killkist kreydy by the priestess of the outer church */
 html {
   font-family: 'Roboto Mono', monospace;
-  font-size: 7.5px;
   background-color: rgba(0, 0, 0, 1);
   color: rgba(80, 255, 255, 1);
+  font-size: 7.2pt;
 }
 @font-face {
   font-family: 'Roboto Mono', monospace;
