Main renders two links to poems

--- a/server/public/assets-css/killkistkreydy.css
+++ b/server/public/assets-css/killkistkreydy.css
@@ -1,6 +1,6 @@
 /* this code by @mxbialostocki // www.mattbialostocki.com */
 /* killkist kreydy by the priestess of the outer church */
-html {
+#tw {
   font-family: 'Roboto Mono', monospace;
   background-color: rgba(0, 0, 0, 1);
   color: rgba(80, 255, 255, 1);
