--- a/server/public/assets-css/main.css
+++ b/server/public/assets-css/main.css
@@ -11,11 +11,22 @@ html {
   src: url("https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,700&amp;subset=cyrillic")
 }
 h1 {
+  font-size: 6rem;
+  color: rgba(255, 255, 255, 1);
   font-family: 'Roboto Mono', monospace;
 }
 a {
   color:inherit;
   text-decoration: none;
+}
+.tw-landing {
+  margin-top: 4rem; 
+  text-align: center;
+  font-size: 9rem;
+  color: rgba(255, 255, 255, .9)
+} 
+.tw-landing:hover {
+  color: rgba(255, 255, 255, 1)
 }
 .main-container {
   width: 1080px;
@@ -24,10 +35,30 @@ a {
   padding-top: 50px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 .entry-frames {
   margin: auto 0px;
-  height: 90%;
-  width: 90%;
-  border: .2px solid violet;
+  height: 30rem;
+  width: 20rem;
+  padding-top: 30px;
+}
+#kk-ef {
+  -webkit-box-shadow:0 0 30px rgba(80, 255, 255, 1); 
+  -moz-box-shadow: 0 0 30px rgba(80, 255, 255, 1); 
+  box-shadow:0 0 30px rgba(80, 255, 255, 1);
+}
+#rr-ef {
+  -webkit-box-shadow:0 0 30px rgba(255, 0, 0, 1); 
+  -moz-box-shadow: 0 0 30px rgba(255, 0, 0, 1); 
+  box-shadow:0 0 30px rgba(255, 0, 0, 1);
+}
+.grow {
+  transition: 200ms ease;
+}
+.grow:hover {
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+  transition: 200ms ease;
 }
